// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: FootBall
message FootBall
{	
	
	
	repeated TFootBallDefine TFootBall = 1; // TFootBall

}

// Defined in table: TFootBall
message TFootBallDefine
{	
	
	
	optional uint32 Id = 1; // 道具ID
	
	
	optional int32 ShowPer = 2; // 出现概率（千分比）
	
	
	optional int32 ItemValue = 3; // 道具价值（单位：分）
	
	
	optional int32 Reward = 4; // 抽水(千分比）
	
	
	optional int32 Notice = 5; // 是否发公告

}

